# FSRDigitalTwin3D-ROS

./: .gitignore  .gitmodules  README.md
src/ur5e_moveit/: CMakeLists.txt  package.xml
src/ur5e_moveit/launch/: dummy.launch.py  robot.ur5e_sim.launch.xml  test.pnp_mover.launch.py  test.trajectory_subscriber.launch.py
src/ur5e_moveit/srv/: MoverService.srv
src/ur5e_moveit_py/: package.xml  setup.cfg  setup.py
src/ur5e_moveit_py/ur5e_moveit_py/: mover.py  trajectory_subscriber.py
