<package format="3">
  <name>ur5e_moveit_py</name>
  <version>0.1.0</version>
  <description>The ur5e_moveit python scripts package</description>
  <author email="raoul.zebisch@uni-a.de">Raoul Zebisch</author>

  <maintainer email="raoul.zebisch@uni-a.de">Raoul Zebisch</maintainer>
  
  <license>MIT</license>

  <build_depend>ur5e_moveit</build_depend>
  <build_export_depend>ur5e_moveit</build_export_depend>
  <exec_depend>ur5e_moveit</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
